<resources>
    <string name="app_name">Sleepla</string>
    <string name="common_nick">Nickname</string>
    <string name="common_sex">Sex</string>
    <string name="common_birthday">Date of birth</string>
    <string name="common_height">Height</string>
    <string name="common_weight">Weight</string>
    <string name="login_agree">I have read and agreed to the</string>
    <string name="login_login">Login</string>
    <string name="login_code">Send</string>
    <string name="login_input_code">Varification code</string>
    <string name="login_input_nickname">Name</string>
    <string name="login_select_sex">Sex</string>
    <string name="login_birth">Birth</string>
    <string name="login_height">Height</string>
    <string name="login_weight">Weight</string>
    <string name="login_skip">Skip</string>
    <string name="common_nextstep">Next</string>
    <string name="common_phone">Phone number</string>
    <string name="common_my_device">My Device</string>
    <string name="common_bind_device">Bonding</string>
    <string name="common_ignore">Ignore</string>
    <string name="index_help_sleep">Sleep-Assist</string>
    <string name="index_alarms">Alarms</string>
    <string name="index_device">Device</string>
    <string name="index_more">More</string>
    <string name="index_yamy_class">Yamind Class</string>
    <string name="tab_home_page">Home</string>
    <string name="tab_report">Report</string>
    <string name="tab_found">Find</string>
    <string name="tab_mine">My</string>
    <string name="report_sleep_hour">Sleep duration</string>
    <string name="report_respiratory_rate">Respiratory rate</string>
    <string name="report_heart_rate">Heart rate aver.</string>
    <string name="report_heart">Heart rate</string>
    <string name="avg_report_heart">Heart rate average</string>
    <string name="report_turn_over">Body rollover</string>
    <string name="report_turn_over_times">Rollover times</string>
    <string name="report_daily_words">Daily words</string>
    <string name="report_yamy_sleep_button">Yamind sleep-button</string>
    <string name="report_yamy_sleep_belt">Yamind sleep-belt</string>
    <string name="middle_alarming">Alarms</string>
    <string name="middle_time">Time</string>
    <string name="middle_period">Period</string>
    <string name="middle_mon">Mon</string>
    <string name="middle_tue">Tue</string>
    <string name="middle_wed">Wed</string>
    <string name="middle_thu">Thu</string>
    <string name="middle_fri">Fri</string>
    <string name="middle_sat">Sat</string>
    <string name="middle_sun">Sun</string>
    <string name="middle_bedtime_reminder">Bedtime Reminder</string>
    <string name="middle_tone">Tone</string>
    <string name="middle_default">Default</string>
    <string name="middle_skip">Skip</string>
    <string name="middle_date_of_birth">Date of birth</string>
    <string name="middle_quit">Cancel</string>
    <string name="middle_confirm">Confirm</string>
    <string name="middle_country_region">Country/region</string>
    <string name="middle_fall_asleep">Fall asleep</string>
    <string name="middle_sleep_duration">Average sleep duration</string>
    <string name="report_health">Health</string>
    <string name="report_a_little_bit_late">Late</string>
    <string name="report_regular">Normal sleep</string>
    <string name="report_deep_sleep">Deep</string>
    <string name="report_moderate_sleep">Moderate</string>
    <string name="report_Light_sleep">Light</string>
    <string name="report_awake">Awake</string>
    <string name="report_daily_report">Daily report</string>
    <string name="report_weekly_report">Weekly report</string>
    <string name="report_monthly_report">Monthly report</string>
    <string name="report_ambient_noise">Environ. noise</string>
    <string name="report_ambient_temperature">Environ. temperature</string>
    <string name="report_ambient_humidity">Environ. humidity</string>
    <string name="report_respiratory_rate_aver">Respiratory rate aver.</string>
    <string name="report_heart_rate_aver">Heart rate aver.</string>
    <string name="report_snoring">Snoring</string>
    <string name="report_current_temperature">Temperature</string>
    <string name="report_current_humidity">Humidity</string>
    <string name="index_close">Close</string>
    <string name="index_buy_it_now">Buy it now</string>
    <string name="index_binding_device">Bonding</string>
    <string name="index_search_device">Search device</string>
    <string name="home_search_device_pinging">Pinging phone</string>
    <string name="home_seconds_close">Close after *</string>
    <string name="home_found_new_version">New version **</string>
    <string name="home_update_now">Update</string>
    <string name="mine_feedback">Feedback list</string>
    <string name="mine_feedbackB">Feedback</string>
    <string name="middle_alarms">Alarms</string>
    <string name="middle_sleep_reminder">Sleep Reminder</string>
    <string name="middle_wellness">Health &amp; Wellness</string>
    <string name="middle_type_of_sleep_promotion">Type of sleep promotion</string>
    <string name="common_how_to_use">Instruction</string>
    <string name="mine_contact">Contact</string>
    <string name="mine_contact_no">Contact No.</string>
    <string name="mine_problem_type">Problem Type</string>
    <string name="mine_operation">Operation</string>
    <string name="mine_product">Product</string>
    <string name="mine_advice">Advice</string>
    <string name="mine_description">Description</string>
    <string name="mine_submit">Submit</string>
    <string name="tab_finding">Finding</string>
    <string name="index_enter">Enter</string>
    <string name="index_confirm_binding">Confirm bonding</string>
    <string name="index_serial_no">Serial No.</string>
    <string name="index_version">Version</string>
    <string name="index_unbinding">Remove</string>
    <string name="index_unbinding_success">Remove successfully!</string>
    <string name="mine_process">Processing</string>
    <string name="mine_complete">Done</string>
    <string name="mine_quick_process">Quick process</string>
    <string name="mine_device_manage">Device management</string>
    <string name="found_cpap">CPAP</string>
    <string name="found_sleep_button">Sleep button</string>
    <string name="common_delete">Delete</string>
    <string name="common_binding">Bonding</string>
    <string name="mine_clear_cache">Clear cache</string>
    <string name="mine_clean">Clean</string>
    <string name="mine_temporary_storage">Cache</string>
    <string name="mine_clean_tip">Cleaning, please wait...</string>
    <string name="mine_wifi_configuration">WIFI Setting</string>
    <string name="mine_wifi_name">WIFI</string>
    <string name="mine_wifi_pws">Password</string>
    <string name="mine_start_setup">Start setup</string>
    <string name="mine_resolved">Solved</string>
    <string name="mine_unsolved">Unsolved</string>
    <string name="common_done">Done</string>
    <string name="mine_checking_update">Update</string>
    <string name="login_term_for_usage">Term of usage for Yamind APP</string>
    <string name="mine_device_management">User terms</string>
    <string name="mine_ranking">Ranking</string>
    <string name="mine_settings">Setting</string>
    <string name="mine_language_choose">Languages</string>
    <string name="mine_about_us">About us</string>
    <string name="mine_log_out">Log out</string>
    <string name="mine_current_select">Selected</string>
    <string name="mine_select_system_language">Select system language</string>
    <string name="mine_all_languages">All languages</string>
    <string name="report_cellphone_monitoring">Cellphone monitoring</string>
    <string name="report_sleep_belt">Sleep belt</string>
    <string name="report_sleep_button">Sleep button</string>
    <string name="report_sleep_data">Sleep data</string>
    <string name="report_sleep_time">Sleep time</string>
    <string name="report_awake_duration">Awake duration</string>
    <string name="report_wake_up_times">Wake-up times</string>
    <string name="common_average_score">Average score</string>
    <string name="common_not_good">Not good</string>
    <string name="common_average_deep_sleep">Deep sleep duration aver.</string>
    <string name="common_bed_time">Bedtime</string>
    <string name="common_ordinary">Ordinary</string>
    <string name="common_fine">Fine</string>
    <string name="report_smart_timing">Sleep aid timing</string>
    <string name="report_sleep_not_monitoring">Sleep-button is not monitoring</string>
    <string name="report_sleep_quality">Sleep quality</string>
    <string name="report_sleep_analysis">After analysis of your sleep data last night, we found your bedtime routine is regular and sanative，with no snoring was detected during sleep.</string>
    <string name="reprot_sleep_report">Sleep report</string>
    <string name="login_other_options">Other login options</string>
    <string name="common_analog_data">Analog data</string>
    <string name="common_high">High</string>
    <string name="common_low">Low</string>
    <string name="common_normal">Normal</string>
    <string name="common_harsh">Harsh</string>
    <string name="common_week">Week</string>
    <string name="common_smart_phone">Smart phone</string>
    <string name="common_incorrect_phone">Incorrect phone number !</string>
    <string name="common_snoring_times">Snoring times</string>
    <string name="common_body_moves">Body moves</string>
    <string name="common_many">Many</string>
    <string name="common_edit">Edit</string>
    <string name="login_sms_tip">The verification code has been sent by SMS, please note</string>
    <string name="common_check_network">Please check the network</string>
    <string name="login_success">Login success</string>
    <string name="login_input_phone_fail">Wrong mobile number input</string>
    <string name="login_fail">Login fail</string>
    <string name="common_save">Save</string>
    <string name="common_male">Male</string>
    <string name="common_female">Female</string>
    <string name="common_app_name">Yamind</string>
    <string name="home_no_device">There is no binding device yet~ Go to bind now.</string>
    <string name="report_phone_data">phone data</string>
    <string name="common_no_yet_open">Not yet open</string>
    <string name="common_language_chinese">Chinese</string>
    <string name="common_language_english">English</string>
    <string name="common_exit_app">Press again to background the app</string>
    <string name="common_very_good">very good</string>
    <string name="common_Awesome">Awesome</string>
    <string name="common_so_so">so so</string>
    <string name="common_not_grade">no score</string>
    <string name="common_exception">exception</string>
    <string name="alarm_remain_time">Alarm time remaining</string>
    <string name="alarm_sleep">Sleep</string>
    <string name="common_hour">h</string>
    <string name="common_hour2">:</string>
    <string name="common_minute">min</string>
    <string name="common_minute2">score</string>
    <string name="common_minute3"> </string>
    <string name="common_times">times</string>
    <string name="common_times_minute">times/min</string>
    <string name="common_feedback_null">You can give some Feedback!</string>
    <string name="second">Second</string>
    <string name="common_get_up">Get up</string>
    <string name="apnea">Apnea</string>
    <string name="homepage_series_title_one"> Sleepla · Relax series </string>
    <string name="homepage_series_content_one"> Sleepla\'s music brings you into the rest and tranquility </string>
    <string name="homepage_series_title_two">Sleepla · Voice of nature </string>
    <string name="homepage_series_content_two">The voice of nature helps you fall asleep quickly </string>
    <string name="homepage_series_title_three"> Sleepla · Meditation series </string>
</resources>